--- a/apps/components/Weather.css
+++ b/apps/components/Weather.css
@@ -1,63 +1,74 @@
-import { Button } from "@/components/ui/button";
-import protokit from "@/public/protokit-zinc.svg";
-import Image from "next/image";
-// @ts-ignore
-import truncateMiddle from "truncate-middle";
-import { Skeleton } from "@/components/ui/skeleton";
-import { Chain } from "./chain";
-import { Separator } from "./ui/separator";
-
-export interface HeaderProps {
-  loading: boolean;
-  wallet?: string;
-  onConnectWallet: () => void;
-  balance?: string;
-  balanceLoading: boolean;
-  blockHeight?: string;
+.weather{
+  place-self: center;
+  padding: 40px;
+  border-radius: 10px;
+  background-image: linear-gradient(45deg, #2f4680, #500ae4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-export default function Header({
-  loading,
-  wallet,
-  onConnectWallet,
-  balance,
-  balanceLoading,
-  blockHeight,
-}: HeaderProps) {
-  return (
-    <div className="flex items-center justify-between border-b p-2 shadow-sm">
-      <div className="container flex">
-        <div className="flex basis-6/12 items-center justify-start">
-          <Image className="h-8 w-8" src={protokit} alt={"Protokit logo"} />
-          <Separator className="mx-4 h-8" orientation={"vertical"} />
-          <div className="flex grow">
-            <Chain height={blockHeight} />
-          </div>
-        </div>
-        <div className="flex basis-6/12 flex-row items-center justify-end">
-          {/* balance */}
-          {wallet && (
-            <div className="mr-4 flex shrink flex-col items-end justify-center">
-              <div>
-                <p className="text-xs">Your balance</p>
-              </div>
-              <div className="w-32 pt-0.5 text-right">
-                {balanceLoading && balance === undefined ? (
-                  <Skeleton className="h-4 w-full" />
-                ) : (
-                  <p className="text-xs font-bold">{balance} MINA</p>
-                )}
-              </div>
-            </div>
-          )}
-          {/* connect wallet */}
-          <Button loading={loading} className="w-44" onClick={onConnectWallet}>
-            <div>
-              {wallet ? truncateMiddle(wallet, 7, 7, "...") : "Connect wallet"}
-            </div>
-          </Button>
-        </div>
-      </div>
-    </div>
-  );
+.search-bar{
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.search-bar input{
+  height: 50px;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  padding-left: 25px;
+  color: #626262;
+  background: #ebfffc;
+  font-size: 18px;
+}
+
+.search-bar img{
+  width: 50px;
+  padding: 15px;
+  border-radius: 50%;
+  background: #ebfffc;
+  cursor: pointer;
+}
+
+.weather-icon{
+  width: 150px;
+  margin: 30px 0;
+}
+
+.temperature{
+  color: #fff;
+  font-size: 80px;
+  line-height: 1;
+}
+
+.location{
+  color: #fff;
+  font-size: 80px;
+}
+.weather-data{
+  width: 100%;
+  margin-top: 40px;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-data .col{
+  display: flex;
+  align-items: flex-start;
+  gap: 12px;
+  font-size: 22px;
+}
+
+.weather-data .col span{
+  display: block;
+  font-size: 16px;
+}
+
+.weather-data .col img{
+  width: 26px;
+  margin-top: 10px;
 }
